--- a/Registro/app/src/main/res/layout/credential_fragment.xml
+++ b/Registro/app/src/main/res/layout/credential_fragment.xml
@@ -62,7 +62,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="60"
-            android:text="Receta Medica"
+            android:text="Receta Médica"
             android:textColor="@color/gray"
             android:textSize="19sp"/>
 
