--- a/Registro/app/src/main/res/layout/detail_fragment.xml
+++ b/Registro/app/src/main/res/layout/detail_fragment.xml
@@ -21,14 +21,13 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="35"
-                android:background="@drawable/background">
+                android:background="@color/black"
+                android:gravity="center">
                 <ImageView
                     android:id="@+id/bgrImage"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/pomada"
-                    />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/pomada"/>
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="0dp"
