--- a/Promotor/app/src/main/res/layout/list_users.xml
+++ b/Promotor/app/src/main/res/layout/list_users.xml
@@ -14,19 +14,13 @@
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="56dp"
-    android:layout_gravity="bottom"
-    android:gravity="center"
-    android:layout_marginBottom="24dp">
-
-    <com.michaldrabik.tapbarmenulib.TapBarMenu
-        android:id="@+id/tapBarMenu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:tbm_backgroundColor="@color/green_toolbar"
-        app:tbm_showItems="true">
+        <com.michaldrabik.tapbarmenulib.TapBarMenu
+            android:id="@+id/tapBarMenu"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="24dp"
+            app:tbm_backgroundColor="@color/green_toolbar" >
 
         <ImageView
             android:id="@+id/imgUpload"
@@ -37,43 +31,47 @@
             android:paddingBottom="10dp"
             android:src="@drawable/upload"
             />
-        <RelativeLayout
-            android:id="@+id/relative_layout1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center">
-
             <RelativeLayout
-                android:id="@+id/badge_layout1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:id="@+id/relative_layout1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center">
 
                 <RelativeLayout
-                    android:id="@+id/relative_layout"
+                    android:id="@+id/badge_layout1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
-                    <ImageView
-                        android:id="@+id/imgDelivery"
+                    <RelativeLayout
+                        android:id="@+id/relative_layout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                        <ImageView
+                            android:id="@+id/imgDelivery"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/entrega"
+                            />
+
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/txtCountPendings"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/entrega" />
+                        android:layout_alignRight="@id/relative_layout"
+                        android:background="@drawable/item_count"
+                        android:text="16"
+                        android:textColor="#FFF"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        android:visibility="visible"
+                        android:paddingBottom="10dp"/>
                 </RelativeLayout>
-
-                <TextView
-                    android:id="@+id/txtCountPendings"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignRight="@id/relative_layout"
-                    android:background="@drawable/item_count"
-                    android:text="16"
-                    android:textColor="#FFF"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:visibility="gone"/>
             </RelativeLayout>
-        </RelativeLayout>
+
+
         <Space
             android:layout_width="56dp"
             android:layout_height="match_parent"
@@ -102,7 +100,6 @@
             />
     </com.michaldrabik.tapbarmenulib.TapBarMenu>
 
-</RelativeLayout>
 
     </FrameLayout>
 
