--- a/Promotor/app/src/main/res/layout/order_fragment.xml
+++ b/Promotor/app/src/main/res/layout/order_fragment.xml
@@ -14,68 +14,108 @@
         android:background="@color/green_toolbar">
 
        <TextView
-           android:id="@+id/txtTotal"
+           android:id="@+id/txtMember"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
-           android:text="JUAN CARLOS PEDROZA PEREZ"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:gravity="center_horizontal|center_vertical"/>
 
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/container_text"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="70"
         android:orientation="vertical"
-        android:weightSum="100"
-        android:gravity="center">
-        <com.elyeproj.loaderviewlibrary.LoaderTextView
-            android:id="@+id/txtFecha"
+        android:weightSum="100">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="15"
+            android:gravity="center"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp">
+            <com.elyeproj.loaderviewlibrary.LoaderTextView
+            android:id="@+id/txt_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+                android:textColor="@color/black"
             android:textStyle="bold"
-            android:padding="15dp"
-            android:text="XXXXXXXXXXXXXXX"
             app:height_weight="0.8"
             app:use_gradient="true"
-            app:width_weight="0.6" />
-
+            app:width_weight="0.6"
+       />
+</RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="15"
+            android:gravity="center"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp">
         <com.elyeproj.loaderviewlibrary.LoaderTextView
-            android:id="@+id/txtEstatus"
+            android:id="@+id/txt_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:padding="15dp"
-            android:text="XXXXXXXXXXXXXXX"
+            android:textColor="@color/black"
             app:height_weight="0.8"
             app:width_weight="1.0"
             app:corners="32" />
-
+</RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="15"
+            android:gravity="center"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp">
         <com.elyeproj.loaderviewlibrary.LoaderTextView
-            android:id="@+id/txtDetalle"
+            android:id="@+id/txt_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:padding="15dp"
-            android:text="XXXXXXXXXXXXXXX"
+            android:drawablePadding="8dp"
+            android:textColor="@color/black"
             app:height_weight="0.8"
             app:width_weight="0.4"
-            app:corners="16"
-            />
-
+            app:corners="16" />
+</RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="15"
+            android:gravity="center"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp">
         <com.elyeproj.loaderviewlibrary.LoaderTextView
-            android:id="@+id/txtProductos"
+            android:id="@+id/txt_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:padding="15dp"
-            android:text="XXXXXXXXXXXXXXX"
+            android:textColor="@color/black"
             app:height_weight="0.8"
             app:width_weight="0.9"
             app:corners="8"
             app:custom_color="@android:color/holo_green_dark"/>
+</RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="15"
+            android:gravity="center"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp">
+            <com.elyeproj.loaderviewlibrary.LoaderImageView
+                android:id="@+id/image_icon"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:scaleType="fitXY"
+                app:use_gradient="true"
+                app:corners="16"/>
+        </RelativeLayout>
     </LinearLayout>
+
 
 
     <LinearLayout
