--- a/Registro/app/src/main/res/layout/list_item_sample.xml
+++ b/Registro/app/src/main/res/layout/list_item_sample.xml
@@ -20,27 +20,35 @@
         android:textColor="@color/green_text"
         android:text="nombre"/>
 
-    <TextView
-        android:id="@+id/txt_line2"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@+id/txt_line1"
-        android:textSize="18sp"
-        android:gravity="center_horizontal"
-        android:textColor="@color/green_text"
-        android:text="nombre largo"/>
+        android:orientation="vertical"
+        android:weightSum="100">
+        <TextView
+            android:id="@+id/txt_line2"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="50"
+            android:textSize="18sp"
+            android:gravity="center_horizontal"
+            android:textColor="@color/green_text"
+            android:text="nombre largo"/>
 
 
-    <TextView
-        android:id="@+id/txt_line3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/txt_line2"
-        android:textSize="18sp"
-        android:gravity="center_horizontal"
-        android:textColor="@color/green_text"
-        android:paddingBottom="15dp"
-        android:text="xxxx"/>
+        <TextView
+            android:id="@+id/txt_line3"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="50"
+            android:textSize="18sp"
+            android:gravity="center_horizontal"
+            android:textColor="@color/green_text"
+            android:paddingBottom="15dp"
+            android:text="xxxx"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
 
