--- a/Registro/app/src/main/res/layout/login_activity.xml
+++ b/Registro/app/src/main/res/layout/login_activity.xml
@@ -43,8 +43,7 @@
                 android:hint="@string/strCorreo"
                 android:textColorHint="@color/gray"
                 android:inputType="textEmailAddress"
-                android:singleLine="true"
-                android:text="hgallardo_dv@hotmail.com"/>
+                android:singleLine="true" />
 
         </RelativeLayout>
 
@@ -66,8 +65,7 @@
                 android:textColorHint="@color/gray"
                 android:inputType="number"
                 android:singleLine="true"
-                android:maxLength="13"
-                android:text="0445500000000"/>
+                android:maxLength="13" />
         </RelativeLayout>
 
 
