--- a/Registro/app/src/main/res/values/colors.xml
+++ b/Registro/app/src/main/res/values/colors.xml
@@ -19,5 +19,8 @@
     <color name="border_blue_button_white">#03A9F4</color>
     <color name="black">#000000</color>
     <color name="yellow">#FFEB3B</color>
+    <color name="transparent">#FFFFFF</color>
+
+
 </resources>
 
