--- a/Registro/app/src/main/res/layout/grid_item.xml
+++ b/Registro/app/src/main/res/layout/grid_item.xml
@@ -15,10 +15,10 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:gravity="center"
-            android:src="@drawable/bud"
+            android:src="@drawable/noimage"
             android:layout_gravity="center"/>
         <RatingBar
-            android:id="@+id/r2"
+            android:id="@+id/ratingProduct"
             style="?android:attr/ratingBarStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
